--- a/components/rx7u7wa1f-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/rx7u7wa1f-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: rx7u7wa1f-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-77be01b07e.nvvn.p3.openshiftapps.com/rhtap/rhtap-qe:e327db20c7b099aabf18b5fd2e3cbbaad3f66b37@sha256:b243850ec47cc21ffc5a216279f5f40e8701694ff78e3c8511b5e3115f15697a
+          name: container-image
